--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
   "scripts": {
     "build": "run-s build:*",
     "build:tsc": "tsc",
+    "copy": "mkdir -p bin && cp src/index.html bin",
     "serve": "browser-sync start -s \"bin\" -f \"bin\"",
-    "start": "run-s watch",
+    "start": "npm run copy && run-s watch",
     "watch:tsc": "tsc -w",
     "watch": "run-p serve watch:*"
   },
   "devDependencies": {
-    "browser-sync": "^2.24.4",
-    "copyfiles": "^2.0.0",
-    "npm-run-all": "4.1.3",
-    "typescript": "^2.9.1"
+    "browser-sync": "^2.26.3",
+    "copyfiles": "^2.1.0",
+    "npm-run-all": "4.1.5",
+    "typescript": "^3.2.4"
   }
 }
